[package]
name = "lesson-010"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", default-features = false, "features" = [
    "csr",
] }
leptos-leaflet = { version = "0.10.0", default-features = false, features = [
    "csr",
] }
web-sys = { version = "0.3.76", features = ["HtmlBodyElement"] }

[features]
csr = []